[project]
name = "circle-fitting-3d"
version = "1.0.0"
authors = [{ name="Cristiano Pizzamiglio", email="cristianopizzamiglio@gmail.com" }]
description = "This package allows to compute the best fit circle given points in three-dimensional space."
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = ["circle", "best-fit", "3D"]
dependencies = ["scikit-spatial >= 1.0.1"]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/CristianoPizzamiglio/circle-fitting-3d"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

